BuildHughes/translation-tool/inputs/source_meta/objects/YAHS_caseSupportTierPopulate__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Account_Record_type__c</fullName>
        <label>Account Record type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Reassign__c</fullName>
        <label>Case Reassign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Record_Type__c</fullName>
        <label>Case Record Type`</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Support_Tier__c</fullName>
        <label>Case Support Tier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Request_Type__c</fullName>
        <label>Customer Request Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logged_in_User_Tier__c</fullName>
        <label>Logged in User Tier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Tier__c</fullName>
        <label>Root Tier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Tier_Read_Only__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Support Tier Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>case_Reassign_read_only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>case Reassign read only</label>
        <type>Checkbox</type>
    </fields>
    <label>YAHS_caseSupportTierPopulate</label>
</CustomObject>